@@ -1,5 +1,7 @@
 2015-05-05  Andy Buckley  <andy.buckley@cern.ch>
 
+	* Rewrite C++ ipolstring parsing using STL string functions rather than Boost: shorter! Boost dependency GONE :-)
+
 	* Replace boost::tuple with std::pair and clean up ParamPoints interface a bit.
 
 	* Add a --veto option to prof-sample, for a user-specified vetoing function.
